# mlx-tts-server

./: .gitignore  README.md  pyproject.toml
docs/: README_zh.md
src/mlx_tts_server/: __init__.py  audio_output.py  config.py  loader.py  protocol.py  registry.py
src/mlx_tts_server/qwen3_tts/: __init__.py  config.py  model.py  synthesizer.py
src/mlx_tts_server/server/: __init__.py  app.py  cli.py  handlers.py
tests/: test_audio_output.py  test_config.py  test_e2e.py  test_loader.py  test_server.py  test_synthesizer.py
